--- a/.gitignore
+++ b/.gitignore
@@ -2,4 +2,5 @@ venv
 scr/controllers/images/
 scr/controllers/saved_models
 scr/resources/images/
-scr/resources/saved_models/
+scr/resources/saved_models/vgg19_final.pt
+scr/resources/saved_models/vgg19.pt
