working with a list of models

--- a/scr/.gitignore
+++ b/scr/.gitignore
@@ -2,5 +2,5 @@ venv
 scr/controllers/images/
 scr/controllers/saved_models
 scr/resources/images/
-scr/resources/saved_models/vgg19_final.pt
-scr/resources/saved_models/vgg19.pt
+scr/resources/saved_models/*
+saved_models
