Threads inicial, no funciona todavía con QWidgets

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,4 @@
 {
-    "python.pythonPath": "C:\\Users\\ManulitoxD\\.conda\\envs\\Covid-RX\\python.exe"
+    "python.pythonPath": "C:\\Users\\ManulitoxD\\.conda\\envs\\Covid-RX\\python.exe",
+    "cmake.configureOnOpen": false
 }
